# portfolio-chat

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  scratch.py
.github/workflows/: ci.yml
self-consistency_results/: results_20251001_224342 corrected.csv
src/portfolio_chat/agents/: codeagent.py  websearch_qa.py
src/portfolio_chat/configs/: chat.yaml  config.yaml  tools.yaml
src/portfolio_chat/configs/model/: gpt-5-nano.yaml  gpt-5.yaml
src/portfolio_chat/eval/: run_dataset.py  run_val_dataset.py
src/portfolio_chat/runtime/: orchestrator.py  session.py
src/portfolio_chat/tools/: websearch.py
src/portfolio_chat/ui/: rich_ui.py
src/portfolio_rag/: app.py  cli.py  questions.py  run_dataset.py  run_val_dataset.py
src/portfolio_rag/agents/: __init__.py  codeagent.py
src/portfolio_rag/configs/: chat.yaml  config.yaml  tools.yaml
src/portfolio_rag/configs/agents/: default.yaml
src/portfolio_rag/configs/model/: gpt-5-mini.yaml  gpt-5.yaml  openai.yaml
src/portfolio_rag/configs/prompts/: default.yaml
src/portfolio_rag/configs/tools/: default.yaml
src/portfolio_rag/eval/: questions.py  run_dataset.py  run_val_dataset.py
src/portfolio_rag/runtime/: orchestrator.py  session.py  toolspecs.py
src/portfolio_rag/tools/: finance_qa.py  orchestrator.py  websearch.py
src/portfolio_rag/ui/: rich_ui.py
