[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-rag"
version = "0.1.0"
description = "Tabular data retrieval augmented generation."
authors = [
    { name = "Samyuktha Ramesh" },
    { name = "Alexander Brady" }
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "openai>=1.102.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]

[tool.setuptools.package-data]
portfolio_rag = ["configs/*.yaml", "configs/**/*.yaml"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
portfolio-chat = "portfolio_rag.cli:main"